--- a/web/index.html
+++ b/web/index.html
@@ -47,15 +47,22 @@
 
     // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    var firebaseConfig = {
-      apiKey: "AIzaSyD4a_WUBxk4xssk68dq5oClHNfyDJ8C0no",
-      authDomain: "silver-approach-321905.firebaseapp.com",
-      projectId: "silver-approach-321905",
-      storageBucket: "silver-approach-321905.appspot.com",
-      messagingSenderId: "849342230913",
-      appId: "1:849342230913:web:56445ba665db437c12f880",
-      measurementId: "G-X4CGHQL6MZ"
+    const firebaseConfig = {
+
+      apiKey: "AIzaSyAuRsBK5rncHYhLDNup5EJUkdplQyLngtQ",
+
+      authDomain: "helping-hands-cb4bc.firebaseapp.com",
+
+      projectId: "helping-hands-cb4bc",
+
+      storageBucket: "helping-hands-cb4bc.appspot.com",
+
+      messagingSenderId: "153850275618",
+
+      appId: "1:153850275618:web:79aab243ea259267cae77b"
+
     };
+
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
